@@ -43,6 +43,8 @@ TODO: fix rounding of colors when !xft (#aaaaaa => #a9a900) (do not use correct,
           Paskevich).
         - rip out support for obsolete sgtty.h interface.
         - rip out support for non-POSIX termios variants.
+        - update libptytty.
+        - update iom.C, make it call ptytty::sanitise_stdfd on init.
 
 8.1  Thu Dec  7 22:27:25 CET 2006
         - ｹﾘｽﾏｽﾌ゚ﾚｾ゙ﾝﾄ - zomg!!1, it's too early!!!
